  * Added the ability to restart the game via love.event.quit("restart").
  * Added support for passing a table to love.mouse.isDown, love.keyboard.isDown, love.keyboard.isScancodeDown, Joystick:isDown, and Joystick:isGamepadDown.
  * Added love.window.isMaximized.
  * Added 'shaderswitches' field to the table returned by love.graphics.getStats.
  * Added Quad:getTextureDimensions.
  * Added PrismaticJoint:getAxis and WheelJoint:getAxis.
  * Added 2-point version of love.physics.newRevoluteJoint.
  * Added table variants of Fixture:setCategory and Fixture:setMask.
  * Added getNextVertex and getPreviousVertex to ChainShape and EdgeShape.
  * Added optional reference angle arguments to RevoluteJoint, PrismaticJoint, and WeldJoint constructors.
  * Added RevoluteJoint:getReferenceAngle, PrismaticJoint:getReferenceAngle, and WeldJoint:getReferenceAngle.

  * Deprecated undocumented Shader:sendTexture, Shader:sendMatrix, Shader:sendInt, and Shader:sendFloat functions.

  * Fixed love on iOS 6.
  * Fixed os.execute always returning -1 on Linux.
  * Fixed the love.lowmemory callback to call collectgarbage() after the callback has fired, instead of before.
  * Fixed love.math.noise(nil) to error instead of returning nil.
  * Fixed an occasional crash when a Thread ends.
  * Fixed a hang at the end of video playback with some video files.
  * Fixed the video decoding thread to not do any work when there are no videos to decode.
  * Fixed love.graphics.newVideo(file) to no longer error if love.audio is disabled.
  * Fixed a rare bug in Source:play for streaming Sources if the associated OpenAL source object was previously used for a static Source.
  * Fixed corrupted Font glyphs in rare cases.
  * Fixed stencils inside Canvases on some OpenGL ES 2 devices.
  * Fixed an OpenGL error in OpenGL ES 3 when multiple render targets are used.
  * Fixed love.window.setMode crashing when called with a Canvas active.